[tool.poetry]
name = "real-time-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
jupyterlab = "^3.2.3"
toml = "^0.10.2"
beautifulsoup4 = "^4.10.0"
openpyxl = "^3.0.9"
black = "^21.10b0"
xlrd = "^2.0.1"
sqlite-utils = "^3.18"
lxml = "^4.6.4"
html5lib = "^1.1"
pyarrow = "^6.0.1"
rich = "^10.15.2"
matplotlib = "^3.5.0"
ipykernel = "^6.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
